<resources>
    <string name="app_name">animations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fade_in">fade in</string>
    <string name="fade_out">fade out</string>
    <string name="slide_up">slide up</string>
    <string name="animation">Animation Demo</string>
    <string name="bounce">bounce</string>
    <string name="rotate">rotate</string>
    <string name="slide_down">slide down</string>

</resources>