<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BlankFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="This is Fragment 1"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B58BF6"
            android:text="Next Fragment"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            app:layout_constraintVertical_bias="0.931" />

        <Button
            android:id="@+id/fade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/fade_in"

            app:layout_constraintBottom_toTopOf="@+id/slide_up"
            app:layout_constraintEnd_toStartOf="@+id/fade_out"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/fade_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fade_out"

            app:layout_constraintBottom_toTopOf="@+id/slide_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fade_in"
            app:layout_constraintTop_toBottomOf="@+id/animation"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/slide_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/slide_up"
            app:layout_constraintBottom_toTopOf="@+id/bounce"
            app:layout_constraintEnd_toStartOf="@+id/slide_down"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fade_in"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/animation"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="116dp"
            android:text="@string/rotate"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bounce" />

        <Button
            android:id="@+id/bounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="116dp"
            android:text="@string/bounce"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/rotate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/slide_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/slide_down"
            app:layout_constraintBottom_toTopOf="@+id/rotate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/slide_up"
            app:layout_constraintTop_toBottomOf="@+id/fade_out"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>